c++: redeclared hidden friend [PR105761]

Here, when we see the second declaration of f we match it with the first
one, copy over DECL_TEMPLATE_INFO, and then try to use it when parsing the
definition, leading to confusion.

	PR c++/105761

gcc/cp/ChangeLog:

	* decl.cc (duplicate_decls): Don't copy DECL_TEMPLATE_INFO
	from a hidden friend.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp1y/auto-fn64.C: New test.